--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ophunt.github.io",
   "version": "0.1.0",
+  "homepage": "https://ophunt.github.io",
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
@@ -10,8 +11,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
